--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,15 @@
     "utils"
   ],
   "homepage": "https://github.com/super-tudou",
-  "license": "Apache-2.0",
   "minimum-stability": "dev",
   "require": {
-    "php": ">=5.5.0"
+    "php": ">=5.4"
   },
-
+  "require-dev": {
+    "php": ">=5.4",
+    "phpunit/phpunit": "5.5.*"
+  },
+  "license": "MIT",
   "authors": [
     {
       "name": "tu.dou",
