--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
   "homepage": "https://github.com/super-tudou",
   "license": "Apache-2.0",
   "minimum-stability": "dev",
+  "prefer-stable": true,
   "require": {
     "php": ">=5.5.0"
   },
-
   "authors": [
     {
       "name": "tu.dou",
@@ -30,5 +30,11 @@
     "files": [
       "src/Helper/Helper.php"
     ]
+  },
+  "repositories": {
+    "drupal": {
+      "type": "composer",
+      "url": "https://packages.drupal.org/8"
+    }
   }
 }
