--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "magictool/container",
+  "name": "magic-tool/container",
   "type": "library",
   "description": "dev help tools",
   "keywords": [
